--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -66,7 +66,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1em;
+  grid-gap: 1em;
   margin: 3em 0;
 }
 
@@ -172,7 +172,7 @@
   }
 
   .portfolio-item__image {
-    max-width: 150px;
+    max-width: 125px;
     margin: 1em 0;
 
     &:last-child {
@@ -203,18 +203,22 @@
 
 @media (min-width: 700px) {
   .portfolio-item__image {
-    max-width: 250px;
-  }
-}
-
-@media (min-width: 900px) {
-  .portfolio-item__list {
-    transform: translateX(-2.5%);
+    max-width: 150px;
   }
 }
 
 @media (min-width: 900px) {
   .portfolio-item__list {
     transform: translateX(-2%);
+  }
+
+  .portfolio-item__image {
+    max-width: 200px;
+  }
+}
+
+@media (min-width: 1024) {
+  .portfolio-item__image {
+    max-width: 250px;
   }
 }
